# sendgrid-amqp-bridge

./: .gitignore  Cargo.toml  shell.nix
src/: amqp.rs  config.rs  main.rs
